<resources>
    <string name="app_name">Estrader</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_login">안녕하세요!</string>
    <string name="hello_guide">부동산 경매 서비스를 편하게 이용하세요.</string>
    <string name="item_guide">부동산 경매 물건 검색</string>
    <string name="delegation_guide">대리 위임 시작</string>
    <string name="how_to_use_guide">사용 방법</string>
    <string name="looking_for_guide">어느 지역을 찾으시나요?</string>
    <string name="recent_search">최근 검색</string>
    <string name="status_bar">상태 바</string>
    <string name="item_image">물건 사진</string>
    <string name="header_logo">상단 로고</string>
    <string name="sign_in"><u>Sign In</u></string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="navigation_home">홈</string>
    <string name="navigation_search">검색</string>
    <string name="navigation_more">더보기</string>
    <string name="navigation_myinfo">내정보</string>
    <string name="navigation_list">리스트</string>
    <string name="navigation_map">지도</string>
    <string name="navigation_searchregion">지역별 검색</string>
    <string name="hamburger_menu">햄버거 메뉴</string>
    <string name="navigation_new">신규매물</string>
    <string name="navigation_case">사건별 검색</string>
    <string name="property_photo">매물 사진</string>
    <string name="property_name">매물 명칭</string>
    <string name="hyperlink"><u>눌러서 자세히 보기</u></string>
    <string name="ask_about_auction_interest">해당 경매에 관심이 있으신가요?</string>
    <string name="accept_contract">대리 위임 요청하기</string>
    <string name="reject_contract"><u>취 소</u></string>
    <string name="intro">인트로</string>
    <string name="thumbnail">썸네일</string>
    <string name="floating">플로팅 액션 버튼</string>
    <string name="notificationReceived">알림을 눌러 \n절차를 진행하세요.</string>
    <string name="contractCompleted">대리위임이\n완료되었습니다.</string>
    <string name="confirm_button">수락할게요!</string>
    <string name="reject_button"><u>다음에 할게요.</u></string>
    <string name="main_screen">메인 화면 이미지</string>
    <string name="main_screen_introduce">새로운 부동산 O2O 경매 서비스</string>
    <string name="main_screen_login">로그인 하기</string>
    <string name="main_screen_findid">아이디 찾기</string>
    <string name="main_screen_findpw">비밀번호 찾기</string>
    <string name="main_screen_sign_up">회원 가입</string>
    <string name="main_screen_id">Input ID</string>
    <string name="main_screen_password">Password</string>
    <string name="main_screen_next_1">다음</string>
    <string name="main_screen_next_2">Login</string>
    <string name="main_screen_forgot_password_text">Forgot Password?</string>
    <string name="name_prompt"><bord>이름을</bord> 입력해주세요.</string>
    <string name="NAVER_CLIENT_ID">uc1k3vyemf</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>