<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:title="@string/navigation_home"
        android:icon="@drawable/ic_home" />
    <item
        android:id="@+id/navigation_map"
        android:enabled="true"
        android:title="@string/navigation_list"
        android:icon="@drawable/list_icon" />
    <item
        android:id="@+id/navigation_more"
        android:enabled="true"
        android:title="@string/navigation_map"
        android:icon="@drawable/ic_map" />
    <item
        android:id="@+id/navigation_myinfo"
        android:enabled="true"
        android:title="@string/navigation_myinfo"
        android:icon="@drawable/person_icon" />
</menu>