<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_body"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="400dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/main_screen"
            android:src="@drawable/logo"
            app:tint="@color/color_main" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userId"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_screen_id"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:visibility="visible"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textSize="@dimen/hint_size" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userPw"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_screen_password"

            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:visibility="visible"

            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:textSize="@dimen/hint_size" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNext2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_button_rounded_corners"
                android:text="로그인"
                android:textColor="#ffffff"
                android:textSize="@dimen/subtitle_size"
                android:textStyle="bold" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:orientation="horizontal">
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/find_id"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_screen_findid"
        android:textColor="#585757"
        android:textSize="@dimen/hint_size"
        android:textStyle="bold" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/find_pw"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_screen_findpw"
        android:textColor="#585757"
        android:textSize="@dimen/hint_size"
        android:textStyle="bold" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sign_in"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/main_screen_sign_up"
                android:textColor="#585757"
                android:textSize="@dimen/hint_size"
                android:textStyle="bold" />


</LinearLayout>
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>
